force-app/main/default/objects/Country__c/fields/alpha2code__c.field-meta.xml
<CustomField>
    <fullName>alpha2code__c</fullName>
    <description>2 characters country ISO code as described in the ISO 3166 international standard.</description>
    <externalId>true</externalId>
    <label>Alpha-2 Code</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>