force-app/main/default/objects/Country__c/fields/alpha3code__c.field-meta.xml
<CustomField>
    <fullName>alpha3code__c</fullName>
    <description>3 characters country ISO code as described in the ISO 3166 international standard.</description>
    <externalId>true</externalId>
    <label>Alpha-3 Code</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>