force-app/main/default/objects/Country__c/fields/CountryFlagImage__c.field-meta.xml
<CustomField>
    <fullName>CountryFlagImage__c</fullName>
    <formula>IMAGE( FlagImageUrl__c ,  alpha3code__c)</formula>
    <label>Country Flag</label>
    <type>Text</type>
</CustomField>