force-app/main/default/objects/Country__c/fields/FlagImageUrl__c.field-meta.xml
<CustomField>
    <fullName>FlagImageUrl__c</fullName>
    <label>Flag Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>