force-app/main/default/objects/Country__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>alpha2code__c</columns>
    <columns>alpha3code__c</columns>
    <columns>CountryFlagImage__c</columns>
    <columns>CapitalCity__c</columns>
    <columns>Region__c</columns>
    <columns>RegionalBlocs__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>